Fix some h2 alignment issues with simulations

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 h2 {
-  align-items: baseline;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 0 0 0.3rem;
   width: 100%;
 
@@ -10,7 +10,9 @@ h2 {
   }
 
   .tools {
-    justify-content: flex-end;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-size: 1rem;
   }
 }
